objects/Pricebook2/fields/Manual_Override__c.field-meta.xml
<CustomField>
    <fullName>Manual_Override__c</fullName>
    <label>Manual Override</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>