objects/Pricebook2/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Polyethylene</fullName>
            </value>
            <value>
                <fullName>Olefines</fullName>
            </value>
            <value>
                <fullName>Expandable Styrenics</fullName>
            </value>
            <value>
                <fullName>Valves</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>