objects/Pricebook2/fields/Revenue_Impact__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Impact__c</fullName>
    <formula>Target_Revenue__c  -  Past_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Impact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>