objects/Pricebook2/fields/Revenue_Impact_Pct__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Impact_Pct__c</fullName>
    <formula>( Target_Revenue__c  -  Past_Revenue__c ) /  Past_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Impact %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>