objects/Pricebook2/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>Product_Family__c</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <columns>Start_Date__c</columns>
    <columns>End_date__c</columns>
    <columns>Status__c</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>