objects/Pricebook2/listViews/Only_Active.listView-meta.xml
<ListView>
    <fullName>Only_Active</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRICEBOOK2.IS_ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Only Active</label>
</ListView>